--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,13 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://dushyant03.github.io/blogness/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'The Blogness Monster'
+theme = 'm10c'
+
+[params]
+  author = "Dushyant Chakravorty"
+  description = "A blog about all things I like."
+
+  [[params.social]]
+    icon = "github"
+    name = "GitHub"
+    url = "https://github.com/dushyant03"
