--- a/hugo.toml
+++ b/hugo.toml
@@ -18,6 +18,7 @@ theme = 'm10c'
 [params]
   author = "Dushyant Chakravorty"
   description = "A blogpost about all things I like."
+  avatar = "images/avatar.jpg/"
 
   [[params.social]]
     icon = "github"
