--- a/hugo.toml
+++ b/hugo.toml
@@ -1,30 +1,36 @@
 baseURL = 'https://dushyant03.github.io/blogness/'
 languageCode = 'en-us'
 title = 'The Blogness'
-theme = 'm10c'
+theme = 'soho'
 
-[menu]
-  [[menu.main]]
-    identifier = "blogs"
-    name = "Blogs"
-    url = "/"
-    weight = 2
-[[menu.main]]
-    identifier = "about"
-    name = "About"
-    url = "/about/"
-    weight = 1  
+summarylength = 10
+enableEmoji = true
 
 [params]
-  author = "Dushyant Chakravorty"
-  description = "A blogpost about all things I like."
-  avatar = "images/avatar.jpg/"
+author = "Dushyant Chakravorty"
+description = "My Blog"
+profilePicture = "images/avatar.jpg"
 
-  [[params.social]]
-    icon = "github"
-    name = "GitHub"
-    url = "https://github.com/dushyant03"
-  [[params.social]]
-    icon = "linkedin"
-    name = "LinkedIn"
-    url = "https://www.linkedin.com/in/dushyant-chakravorty-a9199759/"
+  [[params.socialIcons]]
+  icon = "fa-linkedin"
+  title = "Linkedin"
+  url = "https://www.linkedin.com/in/dushyant-chakravorty-a9199759/"
+
+  [[params.socialIcons]]
+  icon = "fa-github"
+  title = "GitHub"
+  url = "https://github.com/dushyant03?tab=repositories"
+
+[menu]
+
+  [[menu.main]]
+  name = "Posts"
+  weight = 100
+  identifier = "posts"
+  url = "/posts/"
+
+  [[menu.main]]
+  name = "About"
+  identifier = "about"
+  weight = 300
+  url = "/about/"
